* Added a compass to the minimap.
* Moved several interface options to the actionbar. Loot tooltips, combat text, statbar labels, and mini-map mode can be adjusted.
* Moved the interface option for automatically equipping items to the Inventory menu.
* Add 'toggle_fps' to the developer console commands.
* Added a 2x zoom mode for the mini-map.

Engine fixes:
* Fixed shrinking tab widgets when widow was resized.
* Remove broken 'font_fallback' from engine/font_settings.txt.
* Add tooltips to language list to show language codes.
* Make strings related to elements more translator-friendly.
* Fixed a bug where looped map sounds wouldn't play if the player entered the map with a sound volume of 0, but later raised the volume.
* Redesigned mouse movement to use the secondary button (right mouse) for movement.
* Fix buttons and checkboxes not handling clicks while the "Accept" key is pressed.
* Fix incorrect descriptions of controls on mobile devices.
* Add renderer support for batching calls to local pixel drawing. This speeds up the pre-render of the minimap.
* Widgets that use custom images can now fall back to the default image if the custom image is missing (instead of exiting in failure).

Game changes:

* Fix the "Locked Out" quest not appearing in the completed quests list.
* Add interface option buttons to the actionbar.
* Add auto-equip checkbox to the Inventory menu.

New translations:

* Catalan (ca) by Marc Tormo i Bochaca

Translation updates:

* German (de) update (Fyrenic)
* Scottish Gaelic (gd) update (GunChleoc)
* Brazilian Portuguese (pt_BR) update (Rui)
* Portuguese (pt) update (Rui)
* Ukranian (uk) update (Igor Paliychuk)
* Vietnamese (vi) update (Nguyễn Gia Phong)



Flare v1.08 (http://flarerpg.org/index.php/2018/09/17/flare-1-08/)

Engine fixes:

* Fixed sdl_hardware renderer not clearing top/bottom for tall windows.
* Re-create render context when "ignore_texture_filter" setting changes.