@@ -105,6 +105,8 @@ private:
 	WidgetLabel         * texture_filter_lb;
 	WidgetCheckBox      * dpi_scaling_cb;
 	WidgetLabel         * dpi_scaling_lb;
+	WidgetCheckBox      * parallax_layers_cb;
+	WidgetLabel         * parallax_layers_lb;
 	WidgetCheckBox      * change_gamma_cb;
 	WidgetLabel         * change_gamma_lb;
 	WidgetSlider        * gamma_sl;
